agile: backlog add support for lgtm

--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -31,6 +31,16 @@ Links:
 
 - [[https://blog.tartanllama.xyz/spaceship-operator/][Spaceship Operator]]
 
+*** Add support for LGTM
+
+As seen in project Heatherstone.
+
+Links:
+
+- https://github.com/utilForever/Hearthstonepp
+- https://lgtm.com/
+- https://lgtm.com/projects/g/utilForever/Hearthstonepp/alerts/?mode=list
+
 *** Consider adding support for OutOfLine                             :story:
 
 OutOfLine seems like an interesting pattern to improve cache
