--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -11,6 +11,39 @@ This document contains the [[http://www.mountaingoatsoftware.com/agile/scrum/pro
 
 Stories that we intend to look at in the very near future.
 
+*** Remove implicit modeling elements                                 :story:
+
+At present we have a number of modeling elements that can be
+configured (enabled/disabled) but do not have a representation within
+a model. Example:
+
+- cmake
+- visual studio
+- odb
+- etc.
+
+This means we cannot associate any configuration with these elements
+such as licences, modelines etc. This is one reason why there are
+hacks to hard-code the modeline of CMake files. A better way is to
+force users to create a modeling element (with the appropriate
+meta-model stereotype, e.g. =masd::visual_studio::project=) and then
+have them configured via named configurations. This means that for
+each archetype we must have a distinct modeling element. It also means
+that some modeling elements are language specific, but the metamodel
+will merge them all into one space. We should also have them inherit
+from common base classes where possible.
+
+*** Add support for "colour themes" to dogen                          :story:
+
+At present we arbitrarily colour coded the UML elements according to
+our preferences, mapping stereotypes to colours. The extensible way to
+do this is to add a feature to a named configuration called
+colour. Then once we have a python API we could ask python to retrieve
+the mapping between stereotypes and colours and apply it (as per
+current script). If we make the colours standard RGB, they can also be
+used in other frontends. We must also include entries for metamodel
+elements such as =dogen::enumeration=.
+
 *** Consider adding support for bitsery serialisation                 :story:
 
 There is yet another modern c++ serialisation library: bitsery. It
@@ -31,7 +64,7 @@ Links:
 
 - [[https://blog.tartanllama.xyz/spaceship-operator/][Spaceship Operator]]
 
-*** Add support for LGTM
+*** Add support for LGTM                                              :story:
 
 As seen in project Heatherstone.
 
@@ -64,6 +97,55 @@ Links:
 - [[https://github.com/nlohmann/json][JSON]]
 - [[https://github.com/open-source-parsers/jsoncpp][JSON CPP]]
 - [[https://github.com/Donerkebap13/DonerSerializer][DonerSerializer]]
+
+*** Mappings as meta-model elements                                   :story:
+
+Now that we started to see PDMs as a solution for proxy models, the
+logical consequence is that mappings too are meta-model elements. In
+effect, it is a meta-model element that maps two model elements. So
+users can create their own mappings if required and PIMs then become a
+user level option. We can of course provide LAM, both as an example
+and proof of concept but users are free to create their own
+mappings. A few things are needed:
+
+- all mappings must be processed first. This is because when we load
+  models we do the mapping.
+- a model should state if its a PSM or a PIM. If a PSM it must
+  reference one or more mapping models. It must not reference any
+  PSMs.
+- mapping models should have references to PSMs. These are loaded on
+  demand if, after mapping, we find types being referenced (e.g. get a
+  list of all referenced models after mapping, check for their
+  presence in references list and load them).
+
+*** Modeline groups as meta-model elements                            :story:
+
+As with mappings, profiles and templates, we should make modeline
+groups meta-model elements too. It may require a little bit of
+thinking because they are not simple KVPs - but we also have support
+for arrays in annotations.
+
+The final destination is for users to create modeline configurations
+or reuse the dogen ones.
+
+In theory we should be able to load modelines incrementally, as they
+are only needed for code generation. However, order of references will
+matter because we need to validate references to modelines.
+
+*** Licences as meta-model elements                                   :story:
+
+Continuing the trend, licences are also moeta-model elements. We can
+use the comments of a class to convey the licence text. The name
+becomes the license name. Users use named configurations to assign
+licences to elements. All artefacts produced across all facets for an
+element will share the same licence. Users can easily add their own
+licence (at whichever level they choose, product line, product,
+component) and then refer to it. The only change is that they must now
+prefix it with the model name (e.g. =masd::licenses::gpl_v2=).
+
+In theory we should be able to load licences incrementally, as they
+are only needed for code generation. However, order of references will
+matter because we need to validate references to licences.
 
 *** Platform description models                                       :story:
 
@@ -100,6 +182,15 @@ Notes:
   a different file format (e.g. *.pdm* )that can share some
   similarities with existing JSON models but is not stuck with all the
   baggage needed to represent user models.
+- however, PDMs are just regular models. Users should be able to make
+  use of the PDM stereotypes to define PDM types in a regular UML
+  model. Interestingly, a PDM from this perspective is similar to a
+  named configuration. The difference is that it introduces a new type
+  into the type system rather than a new stereotype. But with this we
+  can now make use of named configurations, making PDMs a lot less
+  verbose (e.g. define a named config and share it across multiple
+  types, like SmartPointer etc). We could even share it across
+  multiple platform models!
 - PDMs should be organised by language (e.g. folder for cpp, etc). Top
   level directory is PDM rather than library.
 - users declare references to PDMs just like normal models. PDMs have
@@ -288,7 +379,7 @@ templates. We should rename templates to traits to make it
 consistent. However, we still need the notion of named collections of
 facet configurations with inheritance support.
 
-*More thoughts*
+*Thoughts on Features*
 
 There is a facet in dogen called "features". The facet can have
 multiple backends:
@@ -306,6 +397,70 @@ The feature facet can be used within a component model or on its own
 model. Features are specifically only product features, not properties
 of users etc. They can be dynamically updated if the backend supports
 it. Generated code must handle event notification.
+
+*Thoughts on Terminology*
+
+- traits should be used in the MOP sense.
+- profiles/collections of settings/configurations should be called
+  =capabilities=. This is because they normally have names like
+  =serialisable= etc. When not used in the context of modeling
+  elements it should be called just configuration (in keeping with
+  feature modeling). A capability is a named configuration for
+  reuse. The only slight snag is that there are named configurations
+  that should not be called capabilities (say licensing details,
+  etc). These are required for product/product line support. Perhaps
+  we should just call them "named configurations". Crucially, named
+  configurations should inherit the namespace of the model and there
+  should not be any clashes (e.g. dogen should error). Users are
+  instructed to define their product line configuration in a model
+  with the name of the product line (e.g. =dogen::serialisable=
+  becomes the stereotype). To make the concept symmetric, we need the
+  notion of a "model level stereotype". This can easily be achieved by
+  conceiving the model as a package. For the purposes of dia we can
+  simply add a =dia.stereotype= which conveys the model
+  stereotypes. With these we can now set named configurations at the
+  model level. This then means the following:
+  - define a model for dogen (the product) with all named
+    configurations. These are equivalent to what we call "profiles" at
+    present and may even have the same names. the only difference is
+    that because they are model elements, we now call them
+    =dogen::PROFILE=, e.g. =dogen::disable_odb_cmake=. We should also
+    add all of the missing features to the named configurations
+    (disable VS, disable C#, etc).
+  - add stereotypes to each model referencing the named configuration.
+- with this approach, product lines become really easy - you just need
+  to create a shared model for the product line (its own git repo and
+  then git submodules). Because named configurations can use
+  inheritance you can easily override at the product level as well as
+  at the component level.
+- when a named configuration is applied to a model element, the
+  features it contains must match the scope. We should stop calling
+  these global/local features and instead call them after the types of
+  modeling elements: model, package, element, etc.
+- traits are now only used for the purposes intended by MOP.
+- features are integrated with UML by adding features to the
+  metamodel.
+- =profiles= should be used in the UML sense only.
+
+Notes:
+
+- loading profiles as meta-model elements is going to be a challenge,
+  especially in a world where any model can make use of them. The
+  problem is we must have access to all profile data before we perform
+  an annotation expansion; at present this is done during the creation
+  of the context in a very non-obvious way (the annotation_factory
+  loads up profiles on construction). We either force users to have
+  configuration models (CMs, configuration models?) in which case we
+  can simply load all of these up first or we need a two-pass approach
+  in which we load up the models but only process the mappings,
+  initialise the annotation factory and then do the regular
+  processing. The other problem is that we are only performing
+  resolution later on, whereas we are now saying we need to expand the
+  stereotype into a full blown annotation by resolving the stereotype
+  into a name quite early in the pipeline. In the past this worked
+  because we were only performing a very shallow resolution (string
+  matching and always in the same model?) whereas now we are asking
+  for full location resolution, across models.
 
 Links:
 
